attempting to align items correctly

--- a/csce242/projects/part6/styles.css
+++ b/csce242/projects/part6/styles.css
@@ -70,13 +70,13 @@ body {
 .wine-info-container {
     display: flex;
     /* justify-content: space-between; */
-    /* width: 100%; */
+    width: 100%;
 }
 
-/* .wine-p-1, .wine-p-2 {
+.wine-p-1, .wine-p-2 {
     margin: 0;
-    white-space: nowrap;
-} */
+    /* white-space: nowrap; */
+}
 
 .wine-p-1 {
     text-align: left;
